--- a/examples/split-example/src/styles.css
+++ b/examples/split-example/src/styles.css
@@ -2,14 +2,22 @@ html, body {
 	position: relative;
 	width: 100%;
 	height: 100%;
+	padding: 0;
 }
 
 body {
 	color: #333;
 	margin: 0;
-	padding: 8px;
+	padding: 0px;
+	height: 100%;
+	width: 100%;
 	box-sizing: border-box;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+}
+
+div#root {
+	height: 100%;
+	width: 100%;
 }
 
 a {
